feat: add operator control projections
